--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js 15
-        uses: actions/setup-done@v2
+        uses: actions/setup-node@v2
         with:
           node-version: '15'
       - run: npm install
