--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -12,3 +12,9 @@ jobs:
           node-version: '15'
       - run: npm install
       - run: npm test
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v3
+        with:
+          reviewers: duiliofelix
+          branch: dev
+          delete-branch: false
