--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -18,3 +18,9 @@ jobs:
           reviewers: duiliofelix
           branch: dev
           delete-branch: false
+      - name: Deploy no Heroku
+        uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "projeto-devops-felipe"
+          heroku_email: "felipe.mattedi@terra.com.br"
