--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -3,6 +3,8 @@ on: [push]
 
 jobs:
   teste:
+    environment:
+      name: Prod
     runs-on:  ubuntu-latest
     steps:
       - uses: actions/checkout@v2
