--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,6 +1,5 @@
 name: Pipeline
 on: [push]
-
 jobs:
   teste:
     runs-on:  ubuntu-latest
@@ -19,6 +18,7 @@ jobs:
           branch: dev
           delete-branch: false
   deploy:
+    needs: teste
     environment:
       name: Prod
     runs-on:  ubuntu-latest
