--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -17,10 +17,20 @@ jobs:
           reviewers: duiliofelix
           branch: dev
           delete-branch: false
-  deploy:
+  merge-pr:
     needs: teste
     environment:
       name: Prod
+    runs-on:  ubuntu-latest
+    steps:
+      - name: Merge PR
+        uses: juliangruber/merge-pull-request-action@v1
+        with:
+          github-token: ${{ secrets.TOKEN }}
+          number: 1
+          method: squash
+  deploy:
+    needs: merge-pr
     runs-on:  ubuntu-latest
     steps:
       - name: Deploy no Heroku
@@ -29,3 +39,4 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "projeto-devops-felipe"
           heroku_email: "felipe.mattedi@terra.com.br"
+          branch: dev
