--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -18,6 +18,7 @@ jobs:
           branch: dev
           delete-branch: false
   AWS:
+    needs: teste
     runs-on:  ubuntu-latest
     steps:
       - name: Configure AWS credentials
@@ -32,19 +33,8 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: my-ecr-repo
+          ECR_REPOSITORY: fzm-teste-ecr
           IMAGE_TAG: ${{ github.sha }}
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-  deploy:
-    needs: teste
-    runs-on:  ubuntu-latest
-    steps:
-      - name: Deploy no Heroku
-        uses: akhileshns/heroku-deploy@v3.12.12
-        with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "projeto-devops-felipe"
-          heroku_email: "felipe.mattedi@terra.com.br"
-          branch: pipeline
