--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -32,5 +32,5 @@ jobs:
           ECR_REPOSITORY: fzm-teste-ecr
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
-          docker push public.ecr.aws/y7l4l2h9/$ECR_REPOSITORY:$IMAGE_TAG
+          docker build -t $ECR_REPOSITORY:latest .
+          docker push public.ecr.aws/y7l4l2h9/$ECR_REPOSITORY:latest
